# cli-metronome

./: README.md  pyproject.toml
cli_metronome/: main.py
per_metronome/: correct.py  main.py
