[tool.poetry]
name = "per-metronome"
version = "0.1.0"
description = ""
authors = ["nkatshiba <nkatshiba@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pygame = "^2.5.2"
npyscreen = "^4.10.5"
py-cui = "^0.1.6"
simpleaudio = "^1.0.4"
sounddevice = "^0.4.6"
urwid = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
